Fix horizontal overflow on .register-section

--- a/web/src/components/register-section/register-section.css
+++ b/web/src/components/register-section/register-section.css
@@ -1,6 +1,8 @@
 @import url('../vars.css');
 
 .register-section {
+    overflow-x: hidden;
+
     & .top {
         margin: 0 auto;
         display: flex;
